--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 		<title></title>
 	</head>
 	<body>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.js"></script>
 	</body>
 </html>
